# deskhop

./: CMakeLists.txt  README.md  config.ini.example
cfgtool/: CMakeLists.txt  cfgtool.c  minGlue.h
pcb/: .gitignore  DeskHop-C-JLCPCB.kicad_pcb  DeskHop-C-JLCPCB.kicad_prl  DeskHop-C-JLCPCB.kicad_pro  DeskHop-C-JLCPCB.kicad_sch  DeskHop_JLCPCB.kicad_pcb  DeskHop_JLCPCB.kicad_prl  DeskHop_JLCPCB.kicad_pro  DeskHop_JLCPCB.kicad_sch  core.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
pcb/BOM/: LCSC_BOM.xls  Power Budget.xls
pcb/CPL/: DeskHop_JLCPCB-top-pos.csv
pcb/Gerber/: DeskHop_JLCPCB-B_Cu.gbl  DeskHop_JLCPCB-B_Mask.gbs  DeskHop_JLCPCB-B_Paste.gbp  DeskHop_JLCPCB-B_Silkscreen.gbo  DeskHop_JLCPCB-Edge_Cuts.gm1  DeskHop_JLCPCB-F_Cu.gtl  DeskHop_JLCPCB-F_Mask.gts  DeskHop_JLCPCB-F_Paste.gtp  DeskHop_JLCPCB-F_Silkscreen.gto  DeskHop_JLCPCB-NPTH-drl_map.gbr  DeskHop_JLCPCB-NPTH.drl  DeskHop_JLCPCB-PTH-drl_map.gbr  DeskHop_JLCPCB-PTH.drl
pcb/libs/: LCSC_C2040.kicad_sym  LCSC_C2828424.kicad_sym  LCSC_C2940629.kicad_sym  LCSC_C2988369.kicad_sym  LCSC_C347376.kicad_sym  LCSC_C366164.kicad_sym  LCSC_C387348.kicad_sym  LCSC_C42411.bak  LCSC_C42411.kicad_sym  LCSC_C470427.kicad_sym  LCSC_C82317.kicad_sym  LCSC_C86487.kicad_sym
pcb/libs/LCSC_C2040.pretty/: LQFN-56_L7.0-W7.0-P0.4-EP.kicad_mod
pcb/libs/LCSC_C2828424.3dshapes/: SOD-323_L1.7-W1.3-LS2.6-RD-1.step
pcb/libs/LCSC_C2828424.pretty/: SOD-323_L1.7-W1.3-LS2.6-RD-1.kicad_mod
pcb/libs/LCSC_C2940629.3dshapes/: SOT-23-3_L2.9-W1.3-P0.95-LS2.4-BR-1.wrl
pcb/libs/LCSC_C2940629.pretty/: SOT-23-3_L2.9-W1.3-P0.95-LS2.4-BR-1.kicad_mod
pcb/libs/LCSC_C2988369.pretty/: USB-C-SMD_G-SWITCH_GT-USB-7010ASV.kicad_mod
pcb/libs/LCSC_C347376.3dshapes/: SOT-23-3L_L2.9-W1.6-H1.1-LS2.8-P0.95.step
pcb/libs/LCSC_C347376.pretty/: SOT-23-3_L3.0-W1.7-P0.95-LS2.9-BR.kicad_mod
pcb/libs/LCSC_C366164.pretty/: SOIC-8_L5.0-W4.0-P1.27-LS6.0-BL.kicad_mod
pcb/libs/LCSC_C387348.3dshapes/: OSC-SMD_4P-L3.2-W2.5-BL-1.wrl
pcb/libs/LCSC_C387348.pretty/: OSC-SMD_4P-L3.2-W2.5-BL-1.kicad_mod
pcb/libs/LCSC_C42411.3dshapes/: USB-A-TH_4P-L14.3-W10.6-H5.7-S7.2.step  USB-A-TH_4P-L14.3-W10.6-H5.7-S7.2.wrl
pcb/libs/LCSC_C42411.pretty/: USB-A-TH_JTJ-USB-10.6-002.kicad_mod
pcb/libs/LCSC_C470427.pretty/: KEY-SMD_4P-L4.2-W3.2-P2.20-LS4.6.kicad_mod
pcb/libs/LCSC_C82317.pretty/: SOIC-8_L5.3-W5.3-P1.27-LS8.0-BL.kicad_mod
pcb/libs/LCSC_C86487.3dshapes/: SMD_4P-L6.0-W6.0-H5.0-LS10.0-P4.5.step  SMD_4P-L6.0-W6.0-H5.0-LS10.0-P4.5.wrl
pcb/libs/LCSC_C86487.pretty/: KEY-SMD_4P-L6.0-W6.0-P4.50.kicad_mod
pcb/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
src/: checksum.h  config.h  handlers.c  keyboard.c  main.h  mouse.c  uart.c  usb.c  user_config.c  user_config.h  utils.c
